09-gateway-api/manifests/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: api
  labels:
    app.kubernetes.io/part-of: k8s-tuto
spec:
  parentRefs:
    - name: main-gateway
      namespace: frontend
  hostnames:
    - "api.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 8080
