09-gateway-api/manifests/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: frontend
  labels:
    app.kubernetes.io/part-of: k8s-tuto
spec:
  parentRefs:
    - name: main-gateway
      namespace: frontend
  hostnames:
    - "app.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
